tests/NormalTests/paczka1/fuzzy1/34360857.err
Error in line 2: hD2auuOEzHX A874 72,7
Error in line 4: hD2auuOEzHX S342 85,8
Error in line 9: ikOmpCPBn A874 15,4
Error in line 21: VxmmI A126 85,0
Error in line 31: cx2ajkjyCi S432 365,55
Error in line 27: hD2auuOEzHX A126 61,2
